# proof-of-work

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/chain/: lib.rs
