[package]
name = "proof-of-work"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.5"
lazy_static = "1.4.0"
byteorder = "1"
hex-literal = "0.3.3"

[lib]
name = "chain"
path = "src/chain/lib.rs"

[[bin]]
name = "bin"
path = "src/main.rs"